# arbitrage-kraken-single

./: .env.example  .gitignore  Cargo.toml  README.md  throughput.ipynb
resources/: asset_pairs_1.csv  asset_pairs_2.csv  asset_pairs_3.csv  asset_pairs_4.csv  asset_pairs_a1.csv  asset_pairs_a2.csv  asset_pairs_all.csv  asset_pairs_b1.csv  asset_pairs_b2.csv  asset_pairs_eth.csv  asset_pairs_other1.csv  asset_pairs_other2.csv  asset_pairs_xbt.csv
scripts/: log_winnings.py  requirements.txt  setup_influxdb.sh
src/: asset_pairs.rs  evaluate_arbitrage.rs  graph_algorithms.rs  influx.rs  kraken.rs  kraken_assets_and_pairs.rs  kraken_orders_listener.rs  kraken_private.rs  kraken_private_rest.rs  kraken_rest.rs  kraken_ws.rs  listener.rs  main.rs  random_logic.rs  structs.rs  telegram.rs  threads.rs  trade.rs  utils.rs  ws_test.rs
