[package]
name = "arbitrage_ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = {version = "0.14", features = ["native-tls"]}
url = "2.2"
futures-util = "0.3"
dotenv = "0.15.0"
log = "0.4"
log4rs = "1.0"
