[package]
name = "arbitrage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = {version = "0.14", features = ["native-tls"]}
futures = "0.3"
url = "2.2"
futures-util = "0.3"
dotenv = "0.15.0"
phf = { version = "0.13.1", features = ["macros"] }
log = "0.4"
log4rs = "1.0"
csv = "1.1.6"
influx_db_client = "0.5.1"
base64 = "0.13.0"
hmac = "0.10.1"
sha2 = "0.9.5"
rand = "0.8.4"
core_affinity = "0.8"
[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",
    "fast-rng",
]